added routes for seeding
